# shipyard

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
api/: index.py
app/: db.py  main.py
app/models/: __init__.py
app/routers/: __init__.py
app/schemas/: __init__.py
docs/: CODEAGENT.md  Comparative Analysis - V2.docx  Comparative Analysis.docx  DEMO_SCRIPT_FINAL.md  DEMO_SCRIPT_MVP.md  PRESEARCH.docx  PRESEARCH.md  Shipyard Presentation.pptx
scripts/: demo_mvp.ps1  generate_comparative_analysis_v2.py
shipyard/: cli.py  config.py  main.py  persistence.py
shipyard/agent/: compaction.py  graph.py  nodes.py  plan_schema.py  state.py  supervisor.py
shipyard/context/: injection.py
shipyard/llm/: anthropic_provider.py  openai_provider.py  provider.py
shipyard/tools/: base.py  edit_file.py  execute_cmd.py  list_files.py  read_file.py  rollback_file.py  search_files.py  snapshots.py  web_fetch.py  web_search.py  write_file.py
shipyard/tracing/: setup.py
shipyard/utils/: retry.py
tests/: test_api.py  test_edit_file.py
