[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shipyard"
version = "0.1.0"
description = "Autonomous coding agent with surgical file editing"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.3",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "langsmith>=0.2",
    "anthropic>=0.42",
    "openai>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "ddgs>=7.0",
    "pyreadline3>=3.4; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[project.scripts]
shipyard-server = "shipyard.main:main"
shipyard-cli = "shipyard.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
